teste/parserstruct/y.output
Terminals unused in grammar

   BPRINCIPAL
   BFUNCOES
   FUNCAO
   BOOL
   TEXTO
   CARACTERE
   REAL
   INTEIRO
   VETOR
   MEU_TIPO
   CERQUILHA
   SE
   IMPRIME
   LEIA
   INCLUIR
   PARE
   ENQUANTO
   PROC
   PARA
   EXECUTE
   SENAO
   CONSTANTE
   RETORNE
   ASPAS_DUPLAS
   ASPAS_SIMPLES
   LCOLCHETE
   RCOLCHETE
   LCHAVE
   RCHAVE
   LPARENTESES
   RPARENTESES
   MENORIGUAL
   MAIORIQUAL
   IGUAL
   DIFERENTE
   MAIOR
   MENOR
   ATRIB
   ATRIB_SOMA
   ATRIB_SUB
   ATRIB_MULT
   ATRIB_DIV
   ATRIB_MOD
   NEGACAO
   INC
   DEC
   E_LOG
   OU_LOG
   ARROBA
   VIRGULA
   PONTOVIRGULA
   MULT
   SUB
   SOMA
   DIV
   MOD
   EXP
   MENOS


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 termo

    3 termo: ID
    4      | literal

    5 literal: LIT_REAL
    6        | LIT_BOOL
    7        | LIT_INT
    8        | LIT_TEXTO


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 3
LIT_TEXTO (259) 8
LIT_BOOL (260) 6
LIT_REAL (261) 5
LIT_INT (262) 7
BPRINCIPAL (263)
BFUNCOES (264)
FUNCAO (265)
BOOL (266)
TEXTO (267)
CARACTERE (268)
REAL (269)
INTEIRO (270)
VETOR (271)
MEU_TIPO (272)
CERQUILHA (273)
SE (274)
IMPRIME (275)
LEIA (276)
INCLUIR (277)
PARE (278)
ENQUANTO (279)
PROC (280)
PARA (281)
EXECUTE (282)
SENAO (283)
CONSTANTE (284)
RETORNE (285)
ASPAS_DUPLAS (286)
ASPAS_SIMPLES (287)
LCOLCHETE (288)
RCOLCHETE (289)
LCHAVE (290)
RCHAVE (291)
LPARENTESES (292)
RPARENTESES (293)
MENORIGUAL (294)
MAIORIQUAL (295)
IGUAL (296)
DIFERENTE (297)
MAIOR (298)
MENOR (299)
ATRIB (300)
ATRIB_SOMA (301)
ATRIB_SUB (302)
ATRIB_MULT (303)
ATRIB_DIV (304)
ATRIB_MOD (305)
NEGACAO (306)
INC (307)
DEC (308)
E_LOG (309)
OU_LOG (310)
ARROBA (311)
VIRGULA (312)
PONTOVIRGULA (313)
MULT (314)
SUB (315)
SOMA (316)
DIV (317)
MOD (318)
EXP (319)
MENOS (320)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
programa (67)
    on left: 2, on right: 0
$@1 (68)
    on left: 1, on right: 2
termo (69)
    on left: 3 4, on right: 2
literal (70)
    on left: 5 6 7 8, on right: 4


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . termo

    ID         shift, and go to state 4
    LIT_TEXTO  shift, and go to state 5
    LIT_BOOL   shift, and go to state 6
    LIT_REAL   shift, and go to state 7
    LIT_INT    shift, and go to state 8

    termo    go to state 9
    literal  go to state 10


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    3 termo: ID .

    $default  reduce using rule 3 (termo)


State 5

    8 literal: LIT_TEXTO .

    $default  reduce using rule 8 (literal)


State 6

    6 literal: LIT_BOOL .

    $default  reduce using rule 6 (literal)


State 7

    5 literal: LIT_REAL .

    $default  reduce using rule 5 (literal)


State 8

    7 literal: LIT_INT .

    $default  reduce using rule 7 (literal)


State 9

    2 programa: $@1 termo .

    $default  reduce using rule 2 (programa)


State 10

    4 termo: literal .

    $default  reduce using rule 4 (termo)
